--- a/Dashboard/React_project/React_pr/sandbox-main/src/components/header/Header.scss
+++ b/Dashboard/React_project/React_pr/sandbox-main/src/components/header/Header.scss
@@ -525,39 +525,65 @@ header {
                 }
                 .info_app{
                   margin-top: 10px;
+                  width: 214px;
+                  height: 22px;
 
-                  img{
-                    width: 14px;
-                    height: 14px;
-                  }
-
-                  .m{
+                  .a{
+                    background-color: #4c49ee;
                     width: 100%;
                     height: auto;
-                    p{
-                      white-space: nowrap;      
-                      overflow: hidden; 
-                      -webkit-line-clamp: 1;        
-                      -webkit-box-orient: vertical;
-                      text-overflow: ellipsis;
-                      color: #06080c;
-                      font-family: 'Roboto', sans-serif;
-                      font-size: 14px;
-                      font-weight: 400;
-                      margin-left: 5px;
-                      padding-top: 0px;
-                      width: 115px;
-                      height: 22px;
-                    
+                    margin-top: 30px;
+
+                    img{
+                      width: 14px;
+                      height: 14px;
+                      margin-top: 3px;
                     }
-                    span{
-                      color: #7585a5;
-                      font-family: 'Roboto', sans-serif;
-                      font-size: 12px;
-                      font-weight: 400;
+  
+                    .m{
+                      width: 100%;
+                      height: auto;
+                      p{
+                        white-space: nowrap;      
+                        overflow: hidden; 
+                        -webkit-line-clamp: 1;        
+                        -webkit-box-orient: vertical;
+                        text-overflow: ellipsis;
+                        color: #06080c;
+                        font-family: 'Roboto', sans-serif;
+                        font-size: 14px;
+                        font-weight: 400;
+                        margin-left: 5px;
+                        padding-top: 0px;
+                        width: 115px;
+                        height: 22px;
+                      
+                      }
+                      span{
+                        color: #7585a5;
+                        font-family: 'Roboto', sans-serif;
+                        font-size: 12px;
+                        font-weight: 400;
+                      }
                     }
                   }
 
+
+                }
+                .info_button{
+                  width: 214px;
+                  height: 33px;
+                  background-color: azure;
+                  margin-top: 20px;
+                  gap: 10px;
+
+                  button{
+                    width: 80px;
+                    height: 33px;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                  }
                 }
 
 
