--- a/Dashboard/React_project/React_pr/sandbox-main/src/components/header/Header.scss
+++ b/Dashboard/React_project/React_pr/sandbox-main/src/components/header/Header.scss
@@ -583,6 +583,10 @@ header {
                     display: flex;
                     justify-content: center;
                     align-items: center;
+
+                    .btn-primary{
+                      background-color: #3e80f9;
+                    }
                   }
                 }
 
