--- a/Dashboard/React_project/React_pr/sandbox-main/src/components/header/Header.scss
+++ b/Dashboard/React_project/React_pr/sandbox-main/src/components/header/Header.scss
@@ -753,21 +753,25 @@ header {
     border-radius: 0 0 12px 12px;
     padding: 12px 24px;
     z-index: 10;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: nowrap !important;
+    height: 51px;
     
-    button {
-      width: 100%;
-      height: 40px;
-      background-color: #3e80f9;
-      color: white;
+    .button-view-all {
+      background:none !important;
+      color: #487fff;
       border: none;
       border-radius: 8px;
       font-family: 'Roboto', sans-serif;
-      font-size: 15px;
-      font-weight: 500;
-      transition: background-color 0.3s;
+      font-size: 16px;
+      font-weight: 700;
+      white-space: nowrap;
+      
       
       &:hover {
-        background-color: #155bc8;
+        text-decoration: underline;
       }
     }
   }
