--- a/Dashboard/React_project/React_pr/sandbox-main/src/components/header/Header.scss
+++ b/Dashboard/React_project/React_pr/sandbox-main/src/components/header/Header.scss
@@ -379,7 +379,7 @@ header {
     .user{
       width: auto;
       height: 42px;
-      background-color: #4e76b3;
+
       margin-right: 24px;
       gap:10px;
 
@@ -387,7 +387,6 @@ header {
 
       .dropdown {
         border-radius: 100px;
-        background-color: #155bc8;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -486,9 +485,9 @@ header {
           }
           }
           .card-body{
-              max-height: 320px; // Ограничиваем высоту body
-              overflow-y: auto; // Включаем скролл
-               // Стили для скроллбара
+              max-height: 320px; 
+              overflow-y: auto; 
+              
                 &::-webkit-scrollbar {
                   width: 6px;
                 }
@@ -776,3 +775,195 @@ header {
     }
   }
 }
+
+.radio-menu{
+  width: 194px;
+  height: 224px;
+  padding: 20px 20px;
+  
+  
+
+  .card-body-radio-button{
+    padding-top: 20px;
+
+    .logo_label_radiobutton{
+      margin-bottom: 16px;
+
+      .logo{
+        border: 1px solid #d5dbe7
+      }
+      .radiobutton{
+        width: 152px;
+        height: 32px;
+
+        label{
+          font-family: 'Roboto', sans-serif;
+          font-size: 15px;
+          font-weight: 600;
+
+          
+        }
+      }
+    }
+  }
+  
+}
+
+
+
+  .button_account{
+    width: 78px !important;
+    height: 42px !important;
+    border-radius: 100px;
+    border: 1px solid #7585a5 !important;
+    margin-left: 10px;
+   
+    
+    
+
+    .img_profile{
+      margin-right: 10px;
+      img{
+        width: 32px;
+        height: 32px;
+        z-index: 1;
+        
+
+      }
+      .user_point{
+        z-index: 4;
+        width: 6px;
+        height: 6px;
+        position: absolute;
+        background-color: #16a34a;
+        left: 40px;
+        top: 30px;
+      }
+    }
+    .down_button{
+      width: 32px;
+      height: 32px;
+      
+    }
+
+    
+    
+    
+    
+  }
+  .size-window {
+  width: 328px !important;
+  min-height: 407px !important;
+  max-height: 407px !important;
+  padding: 20px !important;
+  
+  // Убедитесь, что контент правильно распределен
+  display: flex !important;
+  flex-direction: column !important;
+}
+  .profile_header{
+    width: 100%;
+    height: 75px;
+    background-color: #ffffff;
+    border-bottom: 1px solid #d5dbe7;
+
+    img{
+      width: 54px;
+      height: 54px;
+    }
+    .name_email{
+      width: 140px;
+      height: 50px;
+      display: flex;
+      flex-direction: column;
+      justify-content: flex-start;
+      margin-top: 5px;
+      margin-left: 7px;
+
+      h1{
+        color: #000000;
+        font-family:"Urbanist", sans-serif;
+        font-size: 22px;
+        font-weight: 700;
+        margin-bottom: 0px;
+      }
+      p{
+        color: #7585a5;
+        font-family: 'Roboto', sans-serif;
+        font-size: 13px;
+        font-weight: 500;
+        margin-top: 2px;
+      }
+
+    }
+  }
+
+  .sroll-button{
+     // Убираем фиксированную высоту и делаем адаптивной
+    max-height: 270px;
+    margin-top: 20px;
+    
+             
+              
+          &::-webkit-scrollbar {
+            width: 6px;
+          }
+          
+          &::-webkit-scrollbar-track {
+            background: none;
+            border-radius: 10px;
+          }
+          
+          &::-webkit-scrollbar-thumb {
+            background: none;
+            border-radius: 10px;
+          }
+          
+          &::-webkit-scrollbar-thumb:hover {
+            background: #a8a8a8;
+          }
+
+            button{
+              width: 100% !important;
+              height: 48px !important;
+              background-color: #ffffff !important;
+              margin-bottom: 3px;
+
+              .scroll_button_logo{
+                padding: 20px 12px;
+                p{
+                  color: #667797;
+                  cursor: pointer;
+                  font-family: 'Roboto', sans-serif;
+                  font-size: 15px;
+                  font-weight: 500;
+                  margin-bottom: 0px;
+                  margin-left: 8px;
+                  margin-top: 2px;
+                  
+  
+                }
+              }
+
+              &:hover{
+                background-color: #ebf1fd !important;
+                border-radius: 8px;
+              }
+              
+            }
+            .line_scroll{
+              width: 100%;
+              height: 1px;
+              background-color:#d5dbe7 ;
+              margin-bottom: 20px;
+            }
+                
+
+
+
+
+
+
+              }
+  
+  
