--- a/Dashboard/React_project/React_pr/sandbox-main/src/pages/main/Main.scss
+++ b/Dashboard/React_project/React_pr/sandbox-main/src/pages/main/Main.scss
@@ -47,7 +47,7 @@
     .conatainer{
       background-color: green;
       width: 1191.750px;
-      //height: calc(100% - 48px);
+     height: 100%;
       margin-left: 24px;
       flex-direction: row;
       
@@ -476,6 +476,158 @@
 
 
     }
+    .card{
+      border-radius: 16px;
+      .h1_text_card2{
+        color: #0f141f;
+        font-family: "Urbanist", sans-serif ;
+        font-size: 22px;
+        font-weight: 700;
+      }
+      .p_text{
+        color: #3e80f9;
+        font-size: 13px;
+        font-family: 'Roboto', sans-serif;
+        font-weight: 500;
+        cursor: pointer;
+  
+        &:hover{
+          text-decoration: underline;
+        }
+    }
+
+    .cards_3{
+      width: 100%;
+      height: auto;
+
+      .card{
+        border: 1px solid #d5dbe7;
+        .card_img{
+          width: 100%;
+          height: 164px;
+          background-color: #d4e1f9;
+          border-radius: 12px;
+          .card-img{
+            width: 130px;
+            height: 131px;
+          }
+        }
+
+        .card-body{
+          padding: 8px 8px;
+
+          .vacantion{
+           
+            width: 96px;
+            height: 23px;
+            background-color: #3e80f9;
+            margin: 15px 0;
+            background-color: #dcfce7;
+            p{
+              font-family: 'Roboto', sans-serif;
+              font-size: 13px;
+              font-weight: 400;
+              margin-bottom: 0px;
+            }
+            
+          }
+          
+            h5{
+              color: #0f141f;
+              font-family: "Urbanist", sans-serif !important;
+              font-size: 18px;
+              font-weight: 700 !important;
+              cursor: pointer;
+
+              &:hover{
+                color: #3e80f9;
+              }
+
+
+          }
+          .prof-people{
+            margin-top: 20px;
+
+            img{
+              width: 28px;
+              height: 28px;
+            }
+
+            span{
+              color: #000;
+              font-family: "Roboto", sans-serif;
+              font-size: 13px;
+              font-weight: 400;
+              margin-left: 10px;
+
+              a{
+                color: #000;
+                font-family: "Roboto", sans-serif;
+                font-size: 13px;
+                font-weight: 600;
+                text-decoration: none;
+
+                &:hover{
+                  color: #3e80f9;
+                  text-decoration: underline;
+                }
+
+              }
+            }
+          }
+
+          .prof-hour{
+            margin: 10px 0px;
+            p{
+              color: #0c1018;
+              font-family: 'Roboto', sans-serif;
+              font-size: 13px;
+              font-weight: 400;
+              margin-bottom: 0px;
+              margin-left: 5px;
+              cursor: pointer;
+            }
+          }
+          .star_number_buttons_view{
+            margin-top: 30px;
+
+            .star_number{
+             p{
+              color: #0c1018;
+              font-family: 'Roboto', sans-serif;
+              font-size: 13px;
+              font-weight: 700;
+              margin-bottom: 0px;
+              margin-left: 5px;
+              cursor: pointer;
+             }
+            }
+            .buttons_view{
+             border: 1px solid #3e80f9 ;
+             color:#3e80f9;
+             background-color: #ffffff ;
+             width: 124px;
+             height: 35px;
+             text-align: center;
+            font-size: 15px; 
+            font-weight: 500; 
+            cursor: pointer;
+            
+            &:hover{
+              background-color: #3e80f9;
+              color: #fff;
+            }
+          }
+
+          }
+        
+
+        
+      }
+    }
+
+
+    }
 
   
-}}
+}}}
