--- a/Dashboard/React_project/React_pr/sandbox-main/src/pages/main/Main.scss
+++ b/Dashboard/React_project/React_pr/sandbox-main/src/pages/main/Main.scss
@@ -630,4 +630,12 @@
     }
 
   
-}}}
+}
+.dashboard-footer{
+  height: 60px;
+  width: 100%;
+  background-color: #fff;
+  margin-left: 24px;
+  margin-right: 24px;
+}
+}}
