--- a/Dashboard/React_project/React_pr/sandbox-main/src/pages/main/Main.scss
+++ b/Dashboard/React_project/React_pr/sandbox-main/src/pages/main/Main.scss
@@ -45,7 +45,6 @@
   .o{
     display: flex;
     .conatainer{
-      background-color: green;
       width: 1191.750px;
      height: 100%;
       margin-left: 24px;
@@ -60,6 +59,7 @@
         
         .card{
           border-radius: 12px;
+          border: none;
           
           
           
@@ -104,6 +104,7 @@
     background-color: rgb(255, 255, 255);
     margin-top: 24px;
     border-radius: 12px;
+    
     
     .card-body{
       .h1_text_buttons{
@@ -326,7 +327,7 @@
          .k{
            width: 100%;
            height: 30px;
-           margin-bottom: 20px;
+           margin-bottom: 11px;
          
   
            h1{
@@ -355,7 +356,7 @@
 
          button{
           border-radius: 8px;
-          margin-bottom: 20px;
+          margin-bottom: 10px;
           border: 1px solid #e2e3e5;
           background-color: #ffffff;
           width: 100%;
@@ -433,51 +434,85 @@
       
     }
     .card_grah{
-      margin-top: 24px;
-      margin-left: 24px;
+  margin-top: 24px;
+  margin-left: 24px; // Добавляем отступ слева
+  width: 381.250px; // Такая же ширина как у других карточек в боковой панели
+  
+  .card{
+    border-radius: 20px;
+    border: none;
+    width: 100%; // Занимает всю ширину родителя
 
-      .card{
-        border-radius: 12px;
-        border:none;
-
-        .card-header{
-          background-color: #ffffff;
-          border-radius: 12px 12px 0 0 ;
-          box-sizing: border-box;
-          
-          h5{
-            font-family: 'Urbanist', sans-serif !important;
-          font-size: 18px !important;
-          font-weight: 700 !important;
-          margin: 10px;
-          }
-        }
-      }
-       .card-body {
-      padding: 16px;
+    .card-header{
       background-color: #ffffff;
-      border-radius: 0 0 12px 12px;
-
-      .progress-chart-container {
-        position: relative;
-      }
-
-      .total-time {
-        margin: 10px 0;
-      }
-
-      .course-status {
-        display: flex;
-        justify-content: space-between;
-        gap: 16px;
-        margin-top: 16px;
+      border-radius: 12px 12px 0 0 ;
+      box-sizing: border-box;
+      padding: 20px 20px;
+      
+      h5{
+        font-family: 'Urbanist', sans-serif !important;
+        font-size: 18px !important;
+        font-weight: 700 !important;
+        margin: 0px;
       }
     }
+  }
+  
+  .progress-chart-container {
+    position: relative;
+  }
+
+  .total-time {
+    margin: 10px 0;
+  }
+
+  .course-status {
+    display: flex;
+    justify-content: space-between;
+    gap: 16px;
+    margin-top: 16px;
+  }
+}
+
+.down-board{
+  border-radius: 18px 18px 0 0 ;
+  border:none;
+  .card-body{
+    padding: 20px 20px;
+    p{
+      color: #667797;
+      font-size: 13px;
+      font-family: 'Roboto', sans-serif;
+      font-weight: 400;
+      margin: 0;
+      
+    }
+    .link{
+      button{
+        border:none;
+        background: none;
+        color: #667797;
+        font-family: 'Roboto', sans-serif;
+        font-weight: 400;
+        font-size: 13px;
+
+        &:hover{
+          color: #3e80f9;
+          text-decoration: underline;
+        }
+      }
+    }
+  }
+
+}
 
 
     }
     .card{
       border-radius: 16px;
+      .card-body{
+        padding: 20px 20px;
+      }
       .h1_text_card2{
         color: #0f141f;
         font-family: "Urbanist", sans-serif ;
@@ -489,6 +524,7 @@
         font-size: 13px;
         font-family: 'Roboto', sans-serif;
         font-weight: 500;
+        margin-bottom: 0px;
         cursor: pointer;
   
         &:hover{
@@ -638,4 +674,4 @@
   margin-left: 24px;
   margin-right: 24px;
 }
-}}
+}
