--- a/Dashboard/React_project/React_pr/sandbox-main/src/components/header/Header.scss
+++ b/Dashboard/React_project/React_pr/sandbox-main/src/components/header/Header.scss
@@ -460,6 +460,10 @@ header {
             display: flex;
         align-items: center;
         justify-content: center;   
+
+        &:focus{
+          background-color: #c5d9fd;
+        }
       }
     }
 }
@@ -513,6 +517,7 @@ header {
             height: 46px;
             padding-top: 5px;
             border-radius: 12px 12px 0 0;
+            border:none;
   
             .element{
              
@@ -863,12 +868,17 @@ header {
     border-radius: 100px;
     border: 1px solid #7585a5 !important;
     margin-left: 10px;
+
+    
+   
+    
    
     
     
 
     .img_profile{
       margin-right: 10px;
+
       img{
         width: 32px;
         height: 32px;
@@ -892,6 +902,10 @@ header {
       
     }
 
+     &:focus {
+    background-color: #c5d9fd !important;
+  }
+
     
     
     
@@ -909,8 +923,8 @@ header {
   .profile_header{
     width: 100%;
     height: 75px;
-    background-color: #ffffff;
     border-bottom: 1px solid #d5dbe7;
+    margin-bottom: 20px;
 
     img{
       width: 54px;
@@ -944,38 +958,35 @@ header {
   }
 
   .sroll-button{
-     
     max-height: 230px;
-    margin-top: 20px;
-    
-             
-              
-          &::-webkit-scrollbar {
-            width: 6px;
-          }
-          
-          &::-webkit-scrollbar-track {
-            background: none;
-            border-radius: 10px;
-          }
-          
-          &::-webkit-scrollbar-thumb {
-            background: none;
-            border-radius: 10px;
-          }
-          
-          &::-webkit-scrollbar-thumb:hover {
-            background: #a8a8a8;
-          }
+    margin-top: 20px;   
+      &::-webkit-scrollbar {
+        width: 6px;
+      }
+      
+      &::-webkit-scrollbar-track {
+        background: none;
+        border-radius: 10px;
+      }
+      
+      &::-webkit-scrollbar-thumb {
+        background: none;
+        border-radius: 10px;
+      }
+      
+      &::-webkit-scrollbar-thumb:hover {
+        background: #a8a8a8;
+      }
 
             button{
               width: 100% !important;
               height: 48px !important;
-              background-color: #ffffff !important;
-              margin-bottom: 3px;
+             background-color: #ffffff !important;
+              padding: 0;
+              margin-bottom: 4px;
 
               .scroll_button_logo{
-                padding: 20px 12px;
+                padding: 12px 20px ;
                 p{
                   color: #667797;
                   cursor: pointer;
@@ -1000,7 +1011,6 @@ header {
               width: 100%;
               height: 1px;
               background-color:#d5dbe7 ;
-              margin-bottom: 20px;
             }
 
             .log-out-button {
@@ -1008,9 +1018,10 @@ header {
   height: 48px !important;
   background-color: #ffffff !important;
   margin-bottom: 3px;
+  margin-top: 8px;
   
   .scroll_button_logo {
-    padding: 20px 12px;
+    padding: 12px 20px;
     
     p {
       color: #667797;
