--- a/Dashboard/React_project/React_pr/sandbox-main/src/pages/main/Main.scss
+++ b/Dashboard/React_project/React_pr/sandbox-main/src/pages/main/Main.scss
@@ -47,6 +47,7 @@
       margin-left: 24px;
       flex-direction: row;
       
+      
       .card_group{
         width: 100%;
         height: 158.500px;
@@ -115,6 +116,9 @@
       border: 1px solid #6290ee;
       box-shadow: none;
     }
+  }
+  .graph{
+    margin: 0;
   }
   .card_group2{
     width: 1191px;
